[workspace]
resolver = "2"
members = [
    "crates/sentinel-identity",
    "crates/sentinel-attestation",
    "crates/sentinel-trust",
    "crates/sentinel-audit",
    "crates/sentinel-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Sentinels-Today/sentinel-core"
homepage = "https://sentinels.today"
authors = ["Sentinels <admin@sentinels.today>"]
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
rand_core = { version = "0.6", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
