[package]
name = "sentinel-trust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Deterministic trust scoring engine for Sentinels."

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
